--- a/Dockerfile.cuda
+++ b/Dockerfile.cuda
@@ -1,15 +1,15 @@
-FROM ubuntu:24.04
+FROM nvidia/cuda:12.6-devel-ubuntu24.04
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3 python3-pip python3-venv \
     build-essential cmake git curl \
     && rm -rf /var/lib/apt/lists/*
 
-RUN echo ">>> Building llama.cpp: CPU only <<<"
+RUN echo ">>> Building llama.cpp: CUDA GPU <<<"
 RUN git clone https://github.com/ggerganov/llama.cpp /llama.cpp --depth=1 \
-    && cmake -B /llama.cpp/build -S /llama.cpp -DCMAKE_BUILD_TYPE=Release -DLLAMA_CURL=OFF \
+    && cmake -B /llama.cpp/build -S /llama.cpp -DCMAKE_BUILD_TYPE=Release -DLLAMA_CURL=OFF -DGGML_CUDA=ON \
     && cmake --build /llama.cpp/build --config Release -j$(nproc)
-RUN echo ">>> llama.cpp CPU build complete <<<"
+RUN echo ">>> llama.cpp CUDA build complete <<<"
 
 WORKDIR /app
 
