added more settings to web ui and restructured folder system + did some optimization for restarting the containers

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,9 @@ Thumbs.db
 
 # Docker build state
 .last_cuda
+
+# Benchmark marker (delete to re-run benchmark)
+.benchmarked
+
+# Claude
+.claude
