--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ LLM_MODEL_REPO=bartowski/Llama-3.2-3B-Instruct-GGUF
 LLM_MODEL_PATH=models/Llama-3.2-3B-Instruct-Q4_K_M.gguf
 
 # ── LLM server ────────────────────────────────────────────────────────────────
-LLM_CONTEXT=4096
+LLM_CONTEXT=4096 # 4096 if CPU, 32768 if GPU
 LLM_THREADS=8
 # GPU layers: set to -1 to offload all layers to GPU, 0 for CPU only
 LLM_GPU_LAYERS=0
